--- a/project2/pages/contacts.html
+++ b/project2/pages/contacts.html
@@ -8,12 +8,13 @@
       <meta name="keywords" content="Contacts, Jordan Patterson, WebDev, Web Development">
       <meta name="viewport" content="width=device-width, intial-scale=1.0">
       <style>
-        body {background-color: cornsilk}
+        body {background-color: cornsilk; text-align: center}
         h1 {color: firebrick; text-align: center}
         h2 {color: gray; text-align: center}
         h3 {color: gray; text-align: center}
         h4 {color: firebrick; text-align: left}
         footer{text-align: center; font-family: sans-serif;}
+        iframe{align-items: center}
 
 
       </style>
