--- a/project2/index.html
+++ b/project2/index.html
@@ -41,6 +41,8 @@
       <blockquote> <i>"You don't have to cook fancy or complicated masterpieces - just good food from fresh ingredients"</i> - Julia Child</blockquote>
     </div>
         <br>
+    <div text-align: center> This is a recipe for Potato Bites. They are simple, delicious, and look great on a serving tray. They are sure to impress your friends and family.  </div>
+        <br>
         <br>
       <h4>Ingredients:</h4>
     <div id="ingredients">
