--- a/project2/index.html
+++ b/project2/index.html
@@ -87,7 +87,7 @@
     <td> <img src="./images/potatopic2.jpg" alt="Image of Potato Bites" height="200" width="200" /></td>
 </tr>
 </table>
-  <a href="#ingredients"; text-align: center>Ingredients</a>
+  <a href="#ingredients"; style="text-align: center; font-family: sans-serif">Ingredients</a>
   </div>
   <div>
     <blockquote> <i>"You don't have to cook fancy or complicated masterpieces - just good food from fresh ingredients"</i> - Julia Child</blockquote>
