--- a/project2/index.html
+++ b/project2/index.html
@@ -87,7 +87,7 @@
     <td> <img src="./images/potatopic2.jpg" alt="Image of Potato Bites" height="200" width="200" /></td>
 </tr>
 </table>
-  <a href="#ingredients"; style=font-family: sans-serif"><center>Ingredients</center></a>
+  <a href="#ingredients"; style="font-family: sans-serif"><center>Ingredients</center></a>
   </div>
   <div>
 
