--- a/project2/pages/about.html
+++ b/project2/pages/about.html
@@ -22,11 +22,15 @@
     <p style="font-family: sans-serif; text-align: center">
       <div id="Intro Paragraph" class="About Me">
       <b>My name is Jordan Patterson, I work full time, have three kids, a great husband, and am working on my degree in Anthropology.
-      I love cooking and entertaining but am usually short on time. When I cook I need it to be fast and there needs to be a way to incoporate my helpers, who are a constant in my kitchen.
-      This quick recipe has been a go-to recipe of mine for many years, I usually serve them every Thanksgiving and they are always a big hit. This recipe is from <cite>rachael ray every day</cite>.
-      For more recipes click <a href="https://www.rachaelraymag.com/">here</a>.
+      I love cooking and entertaining but am usually short on time. <br>
+      When I cook I need it to be fast and there needs to be a way to incoporate my helpers, who are a constant in my kitchen.
+      This quick recipe has been a go-to recipe of mine for many years, <br>
+      I usually serve them every Thanksgiving and they are always a big hit. This recipe is from <cite>rachael ray every day</cite>. For
+      more recipes click <a href="https://www.rachaelraymag.com/">here</a>.</b>
+    </p>
       <br>
-      Another constant in our house is music and dancing, we may not be very good at the latter but
+      <br>
+      When cooking we love to listen to music. A favorite artist is weezer, if you would like
 
     </div>
   </p>
