--- a/project2/pages/about.html
+++ b/project2/pages/about.html
@@ -56,6 +56,6 @@ with the University of Montana, School of Media Arts.&#169;
   </body>
   <footer>
     <a href="../index.html">Home</a> <br>
-    <a href="./contacts.html">Behind the Magic</a>
+    <a href="./contacts.html">Contact</a>
   </footer>
 </html>
