--- a/project2/pages/contacts.html
+++ b/project2/pages/contacts.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-      <title>Contact US</title>
+      <title>Contact</title>
       <meta charset="utf-8">
       <meta name="description" content="Contacts">
       <meta name="author" content="Jordan Patterson">
@@ -20,22 +20,18 @@
       </style>
   </head>
   <body>
-      <p>
-        This webpage was produced for the class Introduction to Web Design & Development <br>
-with the University of Montana, School of Media Arts.&#169;
-      </p>
-          <br/>
-          <br/>
-        <address>
-          University of Montana<br/>
-          School of Media Arts, McGill Hall Room 224<br/>
-          32 Campus Drive<br/>
-          Missoula, MT 59812<br/>
-        </address>
-          <br/>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2728.048493383152!2d-113.98580903439522!3d46.862418079142365!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535dcc33c3d4cbd5%3A0xd77cd4f46bdf5b89!2sMcGill+Hall%2C+32+Campus+Dr%2C+Missoula%2C+MT+59812!5e0!3m2!1sen!2sus!4v1520902652726" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <h1>Contact</h1>
+    <form action="http://www.example.com/subscribe.php" method="get" id="subscribe-form" class="basic-forms">
 
-    </div>
+</form> action="/action_page.php">
+    First name:<br>
+    <input type="text" name="firstname">
+    <br>
+    Last name:<br>
+    <input type="text" name="lastname" value="Mouse">
+    <br><br>
+    <input type="submit" value="Submit">
+  </form>
 
   </body>
   <br>
