--- a/project2/pages/contacts.html
+++ b/project2/pages/contacts.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-      <title>Contact</title>
+      <title>Questionnaire</title>
       <meta charset="utf-8">
       <meta name="description" content="Contacts">
       <meta name="author" content="Jordan Patterson">
@@ -20,21 +20,9 @@
       </style>
   </head>
   <body>
-    <h1>Contact</h1>
-    <form action="http://www.example.com/subscribe.php" method="get" id="subscribe-form" class="basic-forms">
-
-</form action="/action_page.php">
-    First name:<br>
-    <input type="text" name="firstname">
-    <br>
-    Last name:<br>
-    <input type="text" name="lastname" value="Mouse">
-    <br><br>
-    <input type="submit" value="Submit">
-  </form>
-
-  </body>
-  <br>
+    <h1>Questionnaire</h1>
+    <form action="http://www.example.com/subscribe.php" method="get" "width:50%"; style="background-color: darkorange"; "align: center">
+      
   <footer>
     <a href="../index.html">Home</a> <br>
     <a href="./about.html">About Me</a>
