--- a/project2/pages/contacts.html
+++ b/project2/pages/contacts.html
@@ -21,8 +21,20 @@
   </head>
   <body>
     <h1>Questionnaire</h1>
-    <form action="http://www.example.com/subscribe.php" method="get" "width:50%"; style="background-color: darkorange"; "align: center">
-      
+    <form action="http://www.example.com/subscribe.php" method="get" "width:50%"; style="background-color: darkorange"; "align: center" "border: 3px black">
+    <p>Do you plan on making this recipe?</P>
+      <input type="radio" name="plan" value="Yes" /> yes
+      <br/>
+      <input type="radio" name="plan" value="No" /> no
+
+    <p>How old are you?</p>
+      <input type="radio" name="age" value="Under 18"> /> under 18
+      <input type="radio" name="age" value="18-25"> />18-25
+      <input type="radio" name="age" value="26-36"> /> 26-36
+      <input type="radio" name="age" value="37-50"> /> 37-50
+      <input type="radio" name="age" value="51-65"> /> 51-65
+      <input type="radio" name="age" value="66 or older"> /> over 65
+  </body>
   <footer>
     <a href="../index.html">Home</a> <br>
     <a href="./about.html">About Me</a>
