--- a/project2/pages/contacts.html
+++ b/project2/pages/contacts.html
@@ -15,25 +15,30 @@
         h4 {color: firebrick; text-align: left}
         footer{text-align: center; font-family: sans-serif;}
         iframe{align-items: center}
-
+        form {width:50%; background-color: lightsalmon; margin-left: auto; margin-right: auto; font-family: sans-serif; text-align: center; border: 3px black}
 
       </style>
   </head>
   <body>
     <h1>Questionnaire</h1>
-    <form action="http://www.example.com/subscribe.php" method="get" "width:50%"; style="background-color: darkorange"; "align: center" "border: 3px black">
+    <form action="http://www.example.com/subscribe.php" method="get">
     <p>Do you plan on making this recipe?</P>
       <input type="radio" name="plan" value="Yes" /> yes
       <br/>
       <input type="radio" name="plan" value="No" /> no
 
     <p>How old are you?</p>
-      <input type="radio" name="age" value="Under 18"> /> under 18
-      <input type="radio" name="age" value="18-25"> />18-25
-      <input type="radio" name="age" value="26-36"> /> 26-36
-      <input type="radio" name="age" value="37-50"> /> 37-50
-      <input type="radio" name="age" value="51-65"> /> 51-65
-      <input type="radio" name="age" value="66 or older"> /> over 65
+      <input type="radio" name="age" value="Under 18" /> under 18
+        <br/>
+      <input type="radio" name="age" value="18-25" /> 18-25
+        <br/>
+      <input type="radio" name="age" value="26-36" /> 26-36
+        <br/>
+      <input type="radio" name="age" value="37-50" /> 37-50
+        <br/>
+      <input type="radio" name="age" value="51-65" /> 51-65
+        <br/>
+      <input type="radio" name="age" value="66 or older" /> over 65
   </body>
   <footer>
     <a href="../index.html">Home</a> <br>
