--- a/project2/pages/contacts.html
+++ b/project2/pages/contacts.html
@@ -15,7 +15,7 @@
         h4 {color: firebrick; text-align: left}
         footer{text-align: center; font-family: sans-serif;}
         iframe{align-items: center}
-        form {width:50%; background-color: lightsalmon; margin-left: auto; margin-right: auto; font-family: sans-serif; text-align: center; border: 3px black}
+        form {width:50%; background-color: lightsalmon; margin-left: auto; margin-right: auto; font-family: sans-serif; text-align: left; border: 3px black}
 
       </style>
   </head>
@@ -39,9 +39,10 @@
       <input type="radio" name="age" value="51-65" /> 51-65
         <br/>
       <input type="radio" name="age" value="66 or older" /> over 65
+    </form>
   </body>
   <footer>
     <a href="../index.html">Home</a> <br>
     <a href="./about.html">About Me</a>
-
+  </footer>
 </html>
